<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Опрос</string>
    <string name="title_home" translatable="false">Домашнаяя страница</string>
    <string name="title_survey" translatable="false">Опрос</string>
    <string name="title_results" translatable="false">Результат</string>
    <string name="get_started" translatable="false">Начать</string>
    <string name="welcome_text_view" translatable="false">Доброй пожаловать в опрос!</string>
    <string name="back" translatable="false">Назад</string>
    <string name="send" translatable="false">Отправить</string>
    <string name="restart" translatable="false">Начать заново</string>
    <string name="home_screen_info">Будь терпелив. Жди здесь обновлений…</string>
    <string name="date_picker_button_title">Введите дату своего рождения</string>
    <string name="date_dialog_title">Выберите дату вашего рождения</string>
</resources>